--- a/style.css
+++ b/style.css
@@ -162,13 +162,41 @@ ________________________
 
 .item1{
     background-color: rgb(255, 190, 225);
+    position:sticky;
+    top:50px;
+    left:50px;
 }
 
 .item2{
     background-color: rgb(131, 204, 233)
 }
-
-/*
+.box__percent {
+    width: 50%;
+    }
+    .box__pixels {
+    width: 200px;
+    }
+    .box__vw {
+        width: 50vw;
+        }
+        .box__vh {
+        height: 20vh;
+        }
+        .font__container {
+            height: auto;
+            margin: 10px;
+            font-size: 25px;
+            }
+            .font__1em {
+            font-size: 1em;
+            }
+            .font__1rem {
+            font-size: 1rem;
+            }
+            .font__100percent {
+            font-size: 100%;
+            justify-content:                  }
+    /*
 ________________________
 Units
 ________________________
@@ -213,6 +241,10 @@ ________________________
     width: 90vw;
     margin-bottom: 50px;
     background-color: var(--primary-100);
+}
+@media screen and (min-width: : 992px){
+    .media__container(background-color: var(--primary-600));
+     
 }
 /* Extra small devices (phones, 600px and down) */
 
